Fix tags style in collapse header.

--- a/src/entities/Category/ui/CategoryList/CategoryList.module.css
+++ b/src/entities/Category/ui/CategoryList/CategoryList.module.css
@@ -27,27 +27,34 @@
 }
 .headerTagsWrapper {
     display: flex;
+    width: 100%;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
+    justify-content: center;
 }
-.tagsIncludeWrapper {
-    width: 100%;
-    white-space: nowrap; /* Запрещаем перенос строк */
-
-}
-.tagsExcludeWrapper {
-    width: 100%;
-}
-
-.headerIncludeTags,
-.headerExcludeTags {
-    white-space: nowrap; /* Запрещаем перенос строк */
-    overflow: hidden; /* Обрезаем все, что не помещается в область */
+.tagsIncludeWrapper, .tagsExcludeWrapper {
+    width: 80%;
+    overflow: hidden;
+    white-space: nowrap;
     text-overflow: ellipsis;
-    margin-left: 20px;
+
+}
+/*.tagsExcludeWrapper {
+
+}*/
+
+.headerIncludeTags, .headerExcludeTags {
+    margin-right: 20px;
 }
 
+/*.headerExcludeTags {
 
+}*/
+
+.spanInc {
+    display: inline-block;
+    width: 90px;
+}
 .panelContent {
     display: flex;
     justify-content: center;
